# Minux

./: CMakeLists.txt  Readme.md  TodoList.md
resources/: sources.md
util/: IO.asm
x32/boot/: Bootloader.asm  MBR.asm
x32/kernel/: kernel.c  kernel.h
x32/kernel/IDT/: IDT.c  exception.asm
x32/kernel/IO/Keyboard/: globals.c  globals.h  stdin.c
x32/kernel/IO/Screen/: SPut.c  SPut.h  globals.c  printf.c
x32/kernel/Shell/: Bash.c
x32/kernel/util/: mem.c  portHelper.c  rounding.c  string.c
x32/testing/: bochsout.txt  bochsrc.bxrc  bx_enh_dbg.ini
x64/boot/: Bootloader.asm  MBR.asm
x64/boot_x64/: Bootloader.asm  MBR.asm
x64/build_x64/: hdd.img
x64/testing/: bochsout.txt  bx_enh_dbg.ini
